# gir1

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gir1-log.sublime-syntax  main.cpp  makefile  sandbox.cpp  version.sh
include/: application.h  camera.h  defines.h  index_buffer.h  input.h  material.h  model.h  model_asset.h  model_instance.h  point_light.h  renderer.h  shader.h  skybox.h  texture.h  utils.h  version.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
include/logging/: handler.h  logging.h
libs/imgui/: .gitignore  CMakeLists.txt  Makefile
libs/stb/: CMakeLists.txt  makefile
resources/models/: cube.model
resources/shaders/: fragment.fshader  light_source.fshader  light_source.vshader  raymarch.fs  raymarch.vs  skybox.fshader  skybox.vshader  texture_2d.fshader  texture_2d.vshader  vertex.vshader
src/: application.cpp  camera.cpp  index_buffer.cpp  input.cpp  material.cpp  model.cpp  model_asset.cpp  model_instance.cpp  point_light.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/logging/: handler.cpp  logging.cpp
tests/: CMakeLists.txt  logging.cpp  test.cpp
